--- a/index.html
+++ b/index.html
@@ -40,44 +40,48 @@
 			</section>
 			<section class="bullet-container">
 				<div class="wrapper">
-					<ul role="list">
-						<li>
-							<p>1</p>
-							<h3>Actionable insights</h3>
-							<p>
-								Optimize your products, improve customer satisfaction and stay
-								ahead of the competition with our product data analytics.
-							</p>
+					<ul class="bullet-list" role="list">
+						<li class="bullet-item">
+							<p class="bullet">1</p>
+							<div>
+								<h3 class="bullet-title">Actionable insights</h3>
+								<p class="bullet-text">
+									Optimize your products, improve customer satisfaction and stay
+									ahead of the competition with our product data analytics.
+								</p>
+							</div>
 						</li>
-						<li>
-							<p>2</p>
-							<h3>Data-driven decisions</h3>
-							<p>
-								Make data-driven decisions with our product data analytics. Our
-								AI-generated reports help you unlock insights hidden in your
-								product data.
-							</p>
+						<li class="bullet-item">
+							<p class="bullet">2</p>
+							<div>
+								<h3 class="bullet-title">Data-driven decisions</h3>
+								<p class="bullet-text">
+									Make data-driven decisions with our product data analytics.
+									Our AI-generated reports help you unlock insights hidden in
+									your product data.
+								</p>
+							</div>
 						</li>
-						<li>
-							<p>3</p>
-							<h3>Always affordable</h3>
-							<p>
-								Always affordable pricing that scales with your business. Get
-								top-quality product data analytics services without hidden costs
-								or unexpected fees.
-							</p>
+						<li class="bullet-item">
+							<p class="bullet">3</p>
+							<div>
+								<h3 class="bullet-title">Always affordable</h3>
+								<p class="bullet-text">
+									Always affordable pricing that scales with your business. Get
+									top-quality product data analytics services without hidden
+									costs or unexpected fees.
+								</p>
+							</div>
 						</li>
 					</ul>
 				</div>
 			</section>
-			<section class="apply-container wrapper">
-				<div class="img-container">
+			<section class="cta-container wrapper">
 					<img
 						src="/assets/images/image-founder.webp"
 						class="img"
 						alt="Louis Graham"
 					/>
-				</div>
 				<div class="text-container">
 					<h2>Be the first to test</h2>
 					<p>
