Add in .hero-wave

--- a/index.html
+++ b/index.html
@@ -25,19 +25,37 @@
 				<img src="/assets/images/logo-light.svg" alt="" />
 				<a href="" class="btn btn-secondary">Apply for access</a>
 			</div>
+			<div class="hero-wave">
+				<svg
+					data-name="Layer 1"
+					xmlns="http://www.w3.org/2000/svg"
+					viewBox="0 0 1200 120"
+					preserveAspectRatio="none"
+				>
+					<path
+						d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+						class="shape-fill"
+					></path>
+				</svg>
+			</div>
 		</header>
+		<!-- <section class="hero-container">
+			<div class="wrapper">
+				<h1>Data <span class="underline">tailored</span> to your needs.</h1>
+				<a href="#" class="btn btn-primary"> Learn more </a>
+			</div>
+			<figure>
+				<img
+					src="/assets/images/image-hero.webp"
+					class="img hero-img"
+					alt="Mockup of smartphone displaying the a page of the app"
+					width="767"
+					height="441"
+				/>
+			</figure>
+		</section> -->
+
 		<main>
-			<section class="hero-container">
-				<div class="wrapper">
-					<h1>Data <span class="underline">tailored</span> to your needs.</h1>
-					<a href="#" class="btn btn-primary"> Learn more </a>
-					<!-- <img
-						src="/assets/images/image-hero.webp"
-						class="img hero-img"
-						alt="Mockup of smartphone displaying the a page of the app"
-					/> -->
-				</div>
-			</section>
 			<section class="bullet-container">
 				<div class="wrapper">
 					<ul class="bullet-list" role="list">
@@ -75,16 +93,16 @@
 						</li>
 					</ul>
 				</div>
-        <div class="semi-circle"></div>
 			</section>
+
 			<section class="cta-container">
 				<div class="wrapper">
 					<img
 						src="/assets/images/image-founder.webp"
-						class="img"
 						alt="Louis Graham"
+						class="img cta-img"
 					/>
-					<div class="text-container">
+					<div class="cta-text">
 						<h2>Be the first to test</h2>
 						<p>
 							Hi, I'm Louis Graham, the founder of the company. Book a demo call
@@ -102,17 +120,9 @@
 				<img src="/assets/images/logo-dark.svg" alt="" />
 				<ul class="links-container" role="list">
 					<li>
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							width="20"
-							height="20"
-							viewBox="0 0 20 20"
-						>
-							<path
-								fill="#584D62"
-								d="M18.896 0H1.104C.494 0 0 .494 0 1.104v17.793C0 19.506.494 20 1.104 20h9.58v-7.745H8.076V9.237h2.606V7.01c0-2.583 1.578-3.99 3.883-3.99 1.104 0 2.052.082 2.329.119v2.7h-1.598c-1.254 0-1.496.597-1.496 1.47v1.928h2.989l-.39 3.018h-2.6V20h5.098c.608 0 1.102-.494 1.102-1.104V1.104C20 .494 19.506 0 18.896 0Z"
-							/>
-						</svg>
+						<a href="#" aria-label="Follow us on Facebook">
+							<!-- facebook -->
+						</a>
 					</li>
 					<li>
 						<svg
