--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 	</head>
 	<body>
 		<header>
-			<div class="wrapper">
+			<nav class="wrapper | flex items-center justify-between">
 				<img src="/assets/images/logo-light.svg" alt="" />
 				<a href="" class="btn btn-secondary">Apply for access</a>
-			</div>
+			</nav>
 			<div class="hero-wave">
 				<svg
 					data-name="Layer 1"
@@ -38,22 +38,20 @@
 					></path>
 				</svg>
 			</div>
+			<section class="hero-container">
+				<div class="wrapper | flex flex-col items-center justify-center">
+					<h1>Data <span class="underline">tailored</span> to your needs.</h1>
+					<a href="#" class="btn btn-primary"> Learn more </a>
+				</div>
+					<img
+						src="/assets/images/image-hero.webp"
+						class="img hero-img"
+						alt="Mockup of smartphone displaying a page of the app"
+						width="767"
+						height="441"
+					/>
+			</section>
 		</header>
-		<!-- <section class="hero-container">
-			<div class="wrapper">
-				<h1>Data <span class="underline">tailored</span> to your needs.</h1>
-				<a href="#" class="btn btn-primary"> Learn more </a>
-			</div>
-			<figure>
-				<img
-					src="/assets/images/image-hero.webp"
-					class="img hero-img"
-					alt="Mockup of smartphone displaying the a page of the app"
-					width="767"
-					height="441"
-				/>
-			</figure>
-		</section> -->
 
 		<main>
 			<section class="bullet-container">
@@ -116,15 +114,28 @@
 			</section>
 		</main>
 		<footer>
-			<div class="wrapper">
+			<div class="wrapper | flex flex-col items-center">
 				<img src="/assets/images/logo-dark.svg" alt="" />
-				<ul class="links-container" role="list">
-					<li>
+				<ul
+					class="links-container | grid place-content-center grid-cols-3"
+					role="list"
+				>
+					<li class="">
 						<a href="#" aria-label="Follow us on Facebook">
-							<!-- facebook -->
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="20"
+								height="20"
+								viewBox="0 0 20 20"
+							>
+								<path
+									fill="#584D62"
+									d="M18.896 0H1.104C.494 0 0 .494 0 1.104v17.793C0 19.506.494 20 1.104 20h9.58v-7.745H8.076V9.237h2.606V7.01c0-2.583 1.578-3.99 3.883-3.99 1.104 0 2.052.082 2.329.119v2.7h-1.598c-1.254 0-1.496.597-1.496 1.47v1.928h2.989l-.39 3.018h-2.6V20h5.098c.608 0 1.102-.494 1.102-1.104V1.104C20 .494 19.506 0 18.896 0Z"
+								/>
+							</svg>
 						</a>
 					</li>
-					<li>
+					<li class="">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							width="20"
@@ -137,7 +148,7 @@
 							/>
 						</svg>
 					</li>
-					<li>
+					<li class="">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							width="20"
