--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<img src="/assets/images/logo-light.svg" alt="" />
 				<a href="" class="btn btn-secondary">Apply for access</a>
 			</nav>
-			<div class="hero-wave">
+			<div class="wave">
 				<svg
 					data-name="Layer 1"
 					xmlns="http://www.w3.org/2000/svg"
@@ -34,34 +34,32 @@
 				>
 					<path
 						d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-						class="shape-fill"
+						class="shape-fill shape-fill-dark"
 					></path>
 				</svg>
 			</div>
-			<section class="hero-container">
+			<section class="hero">
 				<div class="wrapper | flex flex-col items-center justify-center">
 					<h1>Data <span class="underline">tailored</span> to your needs.</h1>
 					<a href="#" class="btn btn-primary"> Learn more </a>
 				</div>
-					<img
-						src="/assets/images/image-hero.webp"
-						class="img hero-img"
-						alt="Mockup of smartphone displaying a page of the app"
-						width="767"
-						height="441"
-					/>
 			</section>
+			<!-- <img
+				src="/assets/images/image-hero.webp"
+				class="img main-img"
+				alt="Mockup of smartphone displaying a page of the app"
+			/> -->
 		</header>
 
 		<main>
-			<section class="bullet-container">
+			<section class="bullets">
 				<div class="wrapper">
-					<ul class="bullet-list" role="list">
+					<ul class="bullet-list | flex" role="list">
 						<li class="bullet-item">
 							<p class="bullet">1</p>
 							<div>
 								<h3 class="bullet-title">Actionable insights</h3>
-								<p class="bullet-text">
+								<p class="fs-400">
 									Optimize your products, improve customer satisfaction and stay
 									ahead of the competition with our product data analytics.
 								</p>
@@ -71,7 +69,7 @@
 							<p class="bullet">2</p>
 							<div>
 								<h3 class="bullet-title">Data-driven decisions</h3>
-								<p class="bullet-text">
+								<p class="fs-400">
 									Make data-driven decisions with our product data analytics.
 									Our AI-generated reports help you unlock insights hidden in
 									your product data.
@@ -82,7 +80,7 @@
 							<p class="bullet">3</p>
 							<div>
 								<h3 class="bullet-title">Always affordable</h3>
-								<p class="bullet-text">
+								<p class="fs-400">
 									Always affordable pricing that scales with your business. Get
 									top-quality product data analytics services without hidden
 									costs or unexpected fees.
@@ -91,9 +89,22 @@
 						</li>
 					</ul>
 				</div>
+				<div class="wave">
+					<svg
+						data-name="Layer 1"
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 1200 120"
+						preserveAspectRatio="none"
+					>
+						<path
+							d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+							class="shape-fill shape-fill-light"
+						></path>
+					</svg>
+				</div>
 			</section>
 
-			<section class="cta-container">
+			<section class="cta">
 				<div class="wrapper">
 					<img
 						src="/assets/images/image-founder.webp"
@@ -113,6 +124,7 @@
 				</div>
 			</section>
 		</main>
+
 		<footer>
 			<div class="wrapper | flex flex-col items-center">
 				<img src="/assets/images/logo-dark.svg" alt="" />
