--- a/index.html
+++ b/index.html
@@ -40,15 +40,17 @@
 			</div>
 			<section class="hero">
 				<div class="wrapper | flex flex-col items-center justify-center">
-					<h1>Data <span class="underline">tailored</span> to your needs.</h1>
+					<h1 class="fs-900">
+						Data <span class="underline">tailored</span> to your needs.
+					</h1>
 					<a href="#" class="btn btn-primary"> Learn more </a>
 				</div>
 			</section>
-			<!-- <img
+			<img
 				src="/assets/images/image-hero.webp"
 				class="img main-img"
 				alt="Mockup of smartphone displaying a page of the app"
-			/> -->
+			/>
 		</header>
 
 		<main>
@@ -58,7 +60,7 @@
 						<li class="bullet-item">
 							<p class="bullet">1</p>
 							<div>
-								<h3 class="bullet-title">Actionable insights</h3>
+								<h3 class="bullet-title | fs-700">Actionable insights</h3>
 								<p class="fs-400">
 									Optimize your products, improve customer satisfaction and stay
 									ahead of the competition with our product data analytics.
@@ -68,7 +70,7 @@
 						<li class="bullet-item">
 							<p class="bullet">2</p>
 							<div>
-								<h3 class="bullet-title">Data-driven decisions</h3>
+								<h3 class="bullet-title | fs-700">Data-driven decisions</h3>
 								<p class="fs-400">
 									Make data-driven decisions with our product data analytics.
 									Our AI-generated reports help you unlock insights hidden in
@@ -79,7 +81,7 @@
 						<li class="bullet-item">
 							<p class="bullet">3</p>
 							<div>
-								<h3 class="bullet-title">Always affordable</h3>
+								<h3 class="bullet-title | fs-700">Always affordable</h3>
 								<p class="fs-400">
 									Always affordable pricing that scales with your business. Get
 									top-quality product data analytics services without hidden
@@ -112,7 +114,7 @@
 						class="img cta-img"
 					/>
 					<div class="cta-text">
-						<h2>Be the first to test</h2>
+						<h2 class="fs-800">Be the first to test</h2>
 						<p>
 							Hi, I'm Louis Graham, the founder of the company. Book a demo call
 							with me to become a beta tester for our app and kickstart your
@@ -128,52 +130,100 @@
 		<footer>
 			<div class="wrapper | flex flex-col items-center">
 				<img src="/assets/images/logo-dark.svg" alt="" />
-				<ul
-					class="links-container | grid place-content-center grid-cols-3"
-					role="list"
-				>
-					<li class="">
-						<a href="#" aria-label="Follow us on Facebook">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="20"
-								height="20"
-								viewBox="0 0 20 20"
-							>
-								<path
-									fill="#584D62"
-									d="M18.896 0H1.104C.494 0 0 .494 0 1.104v17.793C0 19.506.494 20 1.104 20h9.58v-7.745H8.076V9.237h2.606V7.01c0-2.583 1.578-3.99 3.883-3.99 1.104 0 2.052.082 2.329.119v2.7h-1.598c-1.254 0-1.496.597-1.496 1.47v1.928h2.989l-.39 3.018h-2.6V20h5.098c.608 0 1.102-.494 1.102-1.104V1.104C20 .494 19.506 0 18.896 0Z"
-								/>
-							</svg>
-						</a>
-					</li>
-					<li class="">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							width="20"
-							height="17"
-							viewBox="0 0 20 17"
-						>
-							<path
-								fill="#584D62"
-								d="M20 2.172a8.192 8.192 0 0 1-2.357.646 4.11 4.11 0 0 0 1.805-2.27 8.22 8.22 0 0 1-2.606.996A4.096 4.096 0 0 0 13.847.248c-2.65 0-4.596 2.472-3.998 5.037A11.648 11.648 0 0 1 1.392 1a4.109 4.109 0 0 0 1.27 5.478 4.086 4.086 0 0 1-1.858-.513c-.045 1.9 1.318 3.679 3.291 4.075a4.113 4.113 0 0 1-1.853.07 4.106 4.106 0 0 0 3.833 2.849A8.25 8.25 0 0 1 0 14.658a11.616 11.616 0 0 0 6.29 1.843c7.618 0 11.923-6.434 11.663-12.205A8.354 8.354 0 0 0 20 2.172Z"
-							/>
-						</svg>
-					</li>
-					<li class="">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							width="20"
-							height="20"
-							viewBox="0 0 20 20"
-						>
-							<path
-								fill="#584D62"
-								d="M10 1.802c2.67 0 2.987.01 4.042.059 2.71.123 3.975 1.409 4.099 4.099.048 1.054.057 1.37.057 4.04 0 2.672-.01 2.988-.057 4.042-.124 2.687-1.387 3.975-4.1 4.099-1.054.048-1.37.058-4.041.058-2.67 0-2.987-.01-4.04-.058-2.717-.124-3.977-1.416-4.1-4.1-.048-1.054-.058-1.37-.058-4.041 0-2.67.01-2.986.058-4.04.124-2.69 1.387-3.977 4.1-4.1 1.054-.048 1.37-.058 4.04-.058ZM10 0C7.284 0 6.944.012 5.877.06 2.246.227.227 2.242.061 5.877.01 6.944 0 7.284 0 10s.012 3.057.06 4.123c.167 3.632 2.182 5.65 5.817 5.817 1.067.048 1.407.06 4.123.06s3.057-.012 4.123-.06c3.629-.167 5.652-2.182 5.816-5.817.05-1.066.061-1.407.061-4.123s-.012-3.056-.06-4.122C19.777 2.249 17.76.228 14.124.06 13.057.01 12.716 0 10 0Zm0 4.865a5.135 5.135 0 1 0 0 10.27 5.135 5.135 0 0 0 0-10.27Zm0 8.468a3.333 3.333 0 1 1 0-6.666 3.333 3.333 0 0 1 0 6.666Zm5.338-9.87a1.2 1.2 0 1 0 0 2.4 1.2 1.2 0 0 0 0-2.4Z"
-							/>
-						</svg>
-					</li>
-				</ul>
+				<nav role="navigation social media">
+					<ul
+						class="links-container | grid place-content-center grid-cols-3"
+						role="list"
+					>
+						<li class="">
+							<a href="#" aria-label="Follow us on Facebook">
+								<svg
+									height="100%"
+									style="
+										fill-rule: evenodd;
+										clip-rule: evenodd;
+										stroke-linejoin: round;
+										stroke-miterlimit: 2;
+									"
+									version="1.1"
+									viewBox="0 0 512 512"
+									width="100%"
+									xml:space="preserve"
+									xmlns="http://www.w3.org/2000/svg"
+									xmlns:serif="http://www.serif.com/"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									class="social-icon"
+								>
+									<path
+										d="M449.446,0c34.525,0 62.554,28.03 62.554,62.554l0,386.892c0,34.524 -28.03,62.554 -62.554,62.554l-106.468,0l0,-192.915l66.6,0l12.672,-82.621l-79.272,0l0,-53.617c0,-22.603 11.073,-44.636 46.58,-44.636l36.042,0l0,-70.34c0,0 -32.71,-5.582 -63.982,-5.582c-65.288,0 -107.96,39.569 -107.96,111.204l0,62.971l-72.573,0l0,82.621l72.573,0l0,192.915l-191.104,0c-34.524,0 -62.554,-28.03 -62.554,-62.554l0,-386.892c0,-34.524 28.029,-62.554 62.554,-62.554l386.892,0Z"
+									/>
+								</svg>
+							</a>
+						</li>
+						<li class="">
+							<a href="#" aria-label="Follow us on Twitter">
+								<svg
+									height="100%"
+									style="
+										fill-rule: evenodd;
+										clip-rule: evenodd;
+										stroke-linejoin: round;
+										stroke-miterlimit: 2;
+									"
+									version="1.1"
+									viewBox="0 0 512 512"
+									width="100%"
+									xml:space="preserve"
+									xmlns="http://www.w3.org/2000/svg"
+									xmlns:serif="http://www.serif.com/"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									class="social-icon"
+								>
+									<path
+										d="M161.014,464.013c193.208,0 298.885,-160.071 298.885,-298.885c0,-4.546 0,-9.072 -0.307,-13.578c20.558,-14.871 38.305,-33.282 52.408,-54.374c-19.171,8.495 -39.51,14.065 -60.334,16.527c21.924,-13.124 38.343,-33.782 46.182,-58.102c-20.619,12.235 -43.18,20.859 -66.703,25.498c-19.862,-21.121 -47.602,-33.112 -76.593,-33.112c-57.682,0 -105.145,47.464 -105.145,105.144c0,8.002 0.914,15.979 2.722,23.773c-84.418,-4.231 -163.18,-44.161 -216.494,-109.752c-27.724,47.726 -13.379,109.576 32.522,140.226c-16.715,-0.495 -33.071,-5.005 -47.677,-13.148l0,1.331c0.014,49.814 35.447,93.111 84.275,102.974c-15.464,4.217 -31.693,4.833 -47.431,1.802c13.727,42.685 53.311,72.108 98.14,72.95c-37.19,29.227 -83.157,45.103 -130.458,45.056c-8.358,-0.016 -16.708,-0.522 -25.006,-1.516c48.034,30.825 103.94,47.18 161.014,47.104"
+										style="fill-rule: nonzero"
+									/>
+								</svg>
+							</a>
+						</li>
+						<li class="">
+							<a href="#" aria-label="Follow us on Instagram">
+								<svg
+									height="100%"
+									style="
+										fill-rule: evenodd;
+										clip-rule: evenodd;
+										stroke-linejoin: round;
+										stroke-miterlimit: 2;
+									"
+									version="1.1"
+									viewBox="0 0 600 600"
+									width="100%"
+									xml:space="preserve"
+									xmlns="http://www.w3.org/2000/svg"
+									xmlns:serif="http://www.serif.com/"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									class="social-icon"
+								>
+									<g transform="matrix(1.01619,0,0,1.01619,44,43.8384)">
+										<path
+											d="M251.921,0.159C183.503,0.159 174.924,0.449 148.054,1.675C121.24,2.899 102.927,7.157 86.902,13.385C70.336,19.823 56.287,28.437 42.282,42.442C28.277,56.447 19.663,70.496 13.225,87.062C6.997,103.086 2.739,121.399 1.515,148.213C0.289,175.083 0,183.662 0,252.08C0,320.497 0.289,329.076 1.515,355.946C2.739,382.76 6.997,401.073 13.225,417.097C19.663,433.663 28.277,447.712 42.282,461.718C56.287,475.723 70.336,484.337 86.902,490.775C102.927,497.002 121.24,501.261 148.054,502.484C174.924,503.71 183.503,504 251.921,504C320.338,504 328.917,503.71 355.787,502.484C382.601,501.261 400.914,497.002 416.938,490.775C433.504,484.337 447.553,475.723 461.559,461.718C475.564,447.712 484.178,433.663 490.616,417.097C496.843,401.073 501.102,382.76 502.325,355.946C503.551,329.076 503.841,320.497 503.841,252.08C503.841,183.662 503.551,175.083 502.325,148.213C501.102,121.399 496.843,103.086 490.616,87.062C484.178,70.496 475.564,56.447 461.559,42.442C447.553,28.437 433.504,19.823 416.938,13.385C400.914,7.157 382.601,2.899 355.787,1.675C328.917,0.449 320.338,0.159 251.921,0.159ZM251.921,45.551C319.186,45.551 327.154,45.807 353.718,47.019C378.28,48.14 391.619,52.244 400.496,55.693C412.255,60.263 420.647,65.723 429.462,74.538C438.278,83.353 443.737,91.746 448.307,103.504C451.757,112.381 455.861,125.72 456.981,150.282C458.193,176.846 458.45,184.814 458.45,252.08C458.45,319.345 458.193,327.313 456.981,353.877C455.861,378.439 451.757,391.778 448.307,400.655C443.737,412.414 438.278,420.806 429.462,429.621C420.647,438.437 412.255,443.896 400.496,448.466C391.619,451.916 378.28,456.02 353.718,457.14C327.158,458.352 319.191,458.609 251.921,458.609C184.65,458.609 176.684,458.352 150.123,457.14C125.561,456.02 112.222,451.916 103.345,448.466C91.586,443.896 83.194,438.437 74.378,429.621C65.563,420.806 60.103,412.414 55.534,400.655C52.084,391.778 47.98,378.439 46.859,353.877C45.647,327.313 45.391,319.345 45.391,252.08C45.391,184.814 45.647,176.846 46.859,150.282C47.98,125.72 52.084,112.381 55.534,103.504C60.103,91.746 65.563,83.353 74.378,74.538C83.194,65.723 91.586,60.263 103.345,55.693C112.222,52.244 125.561,48.14 150.123,47.019C176.687,45.807 184.655,45.551 251.921,45.551Z"
+											style="fill-rule: nonzero"
+										/>
+										<path
+											d="M251.921,336.053C205.543,336.053 167.947,298.457 167.947,252.08C167.947,205.702 205.543,168.106 251.921,168.106C298.298,168.106 335.894,205.702 335.894,252.08C335.894,298.457 298.298,336.053 251.921,336.053ZM251.921,122.715C180.474,122.715 122.556,180.633 122.556,252.08C122.556,323.526 180.474,381.444 251.921,381.444C323.367,381.444 381.285,323.526 381.285,252.08C381.285,180.633 323.367,122.715 251.921,122.715Z"
+											style="fill: rgb(3, 4, 4); fill-rule: nonzero"
+										/>
+										<path
+											d="M416.627,117.604C416.627,134.3 403.092,147.834 386.396,147.834C369.701,147.834 356.166,134.3 356.166,117.604C356.166,100.908 369.701,87.374 386.396,87.374C403.092,87.374 416.627,100.908 416.627,117.604Z"
+											style="fill: rgb(3, 4, 4); fill-rule: nonzero"
+										/>
+									</g>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</nav>
 			</div>
 		</footer>
 	</body>
