--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
 					</h1>
 					<a href="#" class="btn btn-primary"> Learn more </a>
 				</div>
+				<img
+					src="/assets/images/bg-pattern-1.svg"
+					alt=""
+					class="header-bg-pattern-left"
+				/>
+				<img
+					src="/assets/images/bg-pattern-2.svg"
+					alt=""
+					class="header-bg-pattern-right"
+				/>
 			</section>
 			<img
 				src="/assets/images/image-hero.webp"
@@ -123,6 +133,11 @@
 						</p>
 						<a href="#" class="btn btn-primary">Apply for access</a>
 					</div>
+					<img
+						src="/assets/images/bg-pattern-3.svg"
+						alt=""
+						class="cta-bg-pattern"
+					/>
 				</div>
 			</section>
 		</main>
