Suggested corrections by FEM

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 	</head>
 	<body>
 		<header>
-			<nav class="wrapper | flex items-center justify-between">
+			<nav
+				class="wrapper | flex items-center justify-between"
+				role="navigation"
+			>
 				<img src="/assets/images/logo-light.svg" alt="" />
 				<a href="" class="btn btn-secondary">Apply for access</a>
 			</nav>
@@ -66,7 +69,7 @@
 		<main>
 			<section class="bullets">
 				<div class="wrapper">
-					<ul class="bullet-list | flex" role="list">
+					<ul class="bullet-list | flex">
 						<li class="bullet-item">
 							<p class="bullet">1</p>
 							<div>
@@ -124,7 +127,7 @@
 						class="img cta-img"
 					/>
 					<div class="cta-text">
-						<h2 class="fs-800">Be the first to test</h2>
+						<p class="fs-800 fw-600 ff-serif">Be the first to test</p>
 						<p>
 							Hi, I'm Louis Graham, the founder of the company. Book a demo call
 							with me to become a beta tester for our app and kickstart your
@@ -145,12 +148,9 @@
 		<footer>
 			<div class="wrapper | flex flex-col items-center">
 				<img src="/assets/images/logo-dark.svg" alt="" />
-				<nav role="navigation social media">
-					<ul
-						class="links-container | grid place-content-center grid-cols-3"
-						role="list"
-					>
-						<li class="">
+				<nav role="navigation">
+					<ul class="links-container | grid place-content-center grid-cols-3">
+						<li>
 							<a href="#" aria-label="Follow us on Facebook">
 								<svg
 									height="100%"
@@ -163,10 +163,6 @@
 									version="1.1"
 									viewBox="0 0 512 512"
 									width="100%"
-									xml:space="preserve"
-									xmlns="http://www.w3.org/2000/svg"
-									xmlns:serif="http://www.serif.com/"
-									xmlns:xlink="http://www.w3.org/1999/xlink"
 									class="social-icon"
 								>
 									<path
@@ -175,7 +171,7 @@
 								</svg>
 							</a>
 						</li>
-						<li class="">
+						<li>
 							<a href="#" aria-label="Follow us on Twitter">
 								<svg
 									height="100%"
@@ -188,10 +184,6 @@
 									version="1.1"
 									viewBox="0 0 512 512"
 									width="100%"
-									xml:space="preserve"
-									xmlns="http://www.w3.org/2000/svg"
-									xmlns:serif="http://www.serif.com/"
-									xmlns:xlink="http://www.w3.org/1999/xlink"
 									class="social-icon"
 								>
 									<path
@@ -201,7 +193,7 @@
 								</svg>
 							</a>
 						</li>
-						<li class="">
+						<li>
 							<a href="#" aria-label="Follow us on Instagram">
 								<svg
 									height="100%"
@@ -214,10 +206,6 @@
 									version="1.1"
 									viewBox="0 0 600 600"
 									width="100%"
-									xml:space="preserve"
-									xmlns="http://www.w3.org/2000/svg"
-									xmlns:serif="http://www.serif.com/"
-									xmlns:xlink="http://www.w3.org/1999/xlink"
 									class="social-icon"
 								>
 									<g transform="matrix(1.01619,0,0,1.01619,44,43.8384)">
