--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<nav
 				class="wrapper | flex items-center justify-between"
 				role="navigation"
+				aria-label="main navigation"
 			>
 				<img src="/assets/images/logo-light.svg" alt="" />
 				<a href="" class="btn btn-secondary">Apply for access</a>
@@ -148,7 +149,7 @@
 		<footer>
 			<div class="wrapper | flex flex-col items-center">
 				<img src="/assets/images/logo-dark.svg" alt="" />
-				<nav role="navigation">
+				<nav role="navigation" aria-label="social profiles navigation">
 					<ul class="links-container | grid place-content-center grid-cols-3">
 						<li>
 							<a href="#" aria-label="Follow us on Facebook">
