small errors fixed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 		<header>
 			<nav
 				class="wrapper | flex items-center justify-between"
-				role="navigation"
 				aria-label="main navigation"
 			>
 				<img src="/assets/images/logo-light.svg" alt="" />
@@ -128,7 +127,7 @@
 						class="img cta-img"
 					/>
 					<div class="cta-text">
-						<p class="fs-800 fw-600 ff-serif">Be the first to test</p>
+						<h2 class="fs-800 fw-600 ff-serif">Be the first to test</h2>
 						<p>
 							Hi, I'm Louis Graham, the founder of the company. Book a demo call
 							with me to become a beta tester for our app and kickstart your
@@ -149,7 +148,7 @@
 		<footer>
 			<div class="wrapper | flex flex-col items-center">
 				<img src="/assets/images/logo-dark.svg" alt="" />
-				<nav role="navigation" aria-label="social profiles navigation">
+				<nav aria-label="social profiles navigation">
 					<ul class="links-container | grid place-content-center grid-cols-3">
 						<li>
 							<a href="#" aria-label="Follow us on Facebook">
